--- a/index.htm
+++ b/index.htm
@@ -1,11 +1,22 @@
 <!Doctype Html>  
 <Html>     
-<Head>      
+<Head> 
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-5TSDGMD');</script>
+<!-- End Google Tag Manager -->
 <Title>     
 Create a Login form   
 </Title>  
 </Head>  
-<Body>   
+<Body>
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5TSDGMD"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 The following tags are used in this Html code for creating the Login form:  
 <form>  
 <label>User Id: </label> <br>  
