--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@ The following tags are used in this Html code for creating the Login form:
 </Body>   
 </Html> 
 <body>
-    <div>This is where the purchase form would go</div>
-    <button id="purchase">Purchase</button>
+    <remove_from_cart",
+
   ecommerce: {
 
     currency: "USD",
@@ -86,6 +86,7 @@ The following tags are used in this Html code for creating the Login form:
       quantity: 5
 
     }
+
 
     <script>
     document.getElementById("purchase").addEventListener("click", function () {
