--- a/index.html
+++ b/index.html
@@ -39,6 +39,33 @@ The following tags are used in this Html code for creating the Login form:
 </Body>   
 </Html> 
 <body>
+  gtag("event", "remove_from_cart", {
+  currency: "USD",
+  value: 7.77,
+  items: [
+    {
+      item_id: "SKU_12345",
+      item_name: "Stan and Friends Tee",
+      affiliation: "Google Merchandise Store",
+      coupon: "SUMMER_FUN",
+      discount: 2.22,
+      index: 0,
+      item_brand: "Google",
+      item_category: "Apparel",
+      item_category2: "Adult",
+      item_category3: "Shirts",
+      item_category4: "Crew",
+      item_category5: "Short sleeve",
+      item_list_id: "related_products",
+      item_list_name: "Related Products",
+      item_variant: "green",
+      location_id: "ChIJIQBpAG2ahYAR_6128GcTUEo",
+      price: 9.99,
+      quantity: 1
+    }
+  ]
+});
+
     <remove_from_cart",
 
   ecommerce: {
